Mantis Clone API
